objects/ShaPavObj__c.object
<CustomObject>
    <description>Test 4.0</description>
    <fields>
        <fullName>PavEZCF2__c</fullName>
        <label>PavEZCF2</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PavEZCF4__c</fullName>
        <label>PavEZCF4</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PavEZCF__c</fullName>
        <description>NA1</description>
        <label>PavEZCF</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShaEZCF2__c</fullName>
        <label>ShaEZCF2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShaEZCFN__c</fullName>
        <description>Hie this is second day of testing
this is final testing and comiiting.........</description>
        <inlineHelpText>Hello now editing senario</inlineHelpText>
        <label>ShaEZCFN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShaEZFieldN__c</fullName>
        <inlineHelpText>Hi every one</inlineHelpText>
        <label>ShaEZFieldM</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>ShaPavObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ShaPavObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ShaPavObj</pluralLabel>
    <recordTypes>
        <fullName>PavEZRT</fullName>
        <active>false</active>
        <description>Test</description>
        <label>PavEZRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>PavEZRT2</fullName>
        <active>false</active>
        <label>PavEZRT2</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShaEZNew</fullName>
        <active>false</active>
        <label>ShaEZNew</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShaEZRT</fullName>
        <active>true</active>
        <label>ShaEZRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShaEZRTM</fullName>
        <active>false</active>
        <description>This is for editing and commiting</description>
        <label>ShaEZRTM</label>
    </recordTypes>
    <recordTypes>
        <fullName>ShaEZRTN</fullName>
        <active>true</active>
        <description>Hello editing For final day of testing</description>
        <label>ShaEZRTN</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>PavEZSR2_EZ__c</fullName>
        <label>PavEZSR2</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>PavEZSR_Test_EZ2_1_1__c</fullName>
        <label>PavEZSR</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ShaEZASN__c</fullName>
        <label>ShaEZASN</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>ShaEZSR__c</fullName>
        <label>ShaEZSR</label>
    </sharingReasons>
    <validationRules>
        <fullName>PavEZVR</fullName>
        <active>true</active>
        <description>Test</description>
        <errorConditionFormula>LastModifiedBy.LastName  &lt;&gt; &quot;Pavan&quot;</errorConditionFormula>
        <errorMessage>Test Pav</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PavEZVR2</fullName>
        <active>true</active>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Pavan&quot;</errorConditionFormula>
        <errorMessage>Test</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShaEZNew</fullName>
        <active>true</active>
        <description>Test</description>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Shamshuddin&quot;</errorConditionFormula>
        <errorMessage>hello error</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShaEZNew1</fullName>
        <active>true</active>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Pavan&quot;</errorConditionFormula>
        <errorMessage>this is error</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShaEZVR2</fullName>
        <active>true</active>
        <description>Hie this is testing</description>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Shamshuddin&quot;</errorConditionFormula>
        <errorMessage>message</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShaEZVRM</fullName>
        <active>true</active>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Pavan&quot;</errorConditionFormula>
        <errorMessage>Test</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShaEZVRN</fullName>
        <active>true</active>
        <description>Modifying Final time on commiting</description>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Shamshuddin&quot;</errorConditionFormula>
        <errorMessage>This is Error message</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ShaEZVRN2</fullName>
        <active>true</active>
        <description>Editing Test</description>
        <errorConditionFormula>LastModifiedBy.CompanyName  &lt;&gt; &quot;Shamshuddin&quot;</errorConditionFormula>
        <errorMessage>Hello</errorMessage>
    </validationRules>
</CustomObject>